added bio attribute field to database and forms and views

--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -9,8 +9,16 @@
 <%= text_field_tag :last_name, @contact.last_name %>
 </div>
 <div>
+<%= label_tag :middle_name %>
+<%= text_field_tag :middle_name, @contact.last_name %>
+</div>
+<div>
 <%= label_tag :email %>
 <%= text_field_tag :email, @contact.email %>
+</div>
+<div>
+<%= label_tag :bio %>
+<%= text_field_tag :bio, @contact.email %>
 </div>
 <%= submit_tag "Edit Contact" %>
 <% end %>
