--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -9,8 +9,16 @@
 <%= text_field_tag :last_name %>
 </div>
 <div>
+<%= label_tag :middle_name %>
+<%= text_field_tag :middle_name %>
+</div>
+<div>
 <%= label_tag :email %>
 <%= text_field_tag :email %>
+</div>
+<div>
+<%= label_tag :bio %>
+<%= text_field_tag :bio %>
 </div>
 <%= submit_tag "Add Contact" %>
 <% end %>
