--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Contacts</h1>
+<h1>Contacts</h1> 
+<a href='/signup'>Signup!</a> 
+<a href='/login'>Login</a>
+<a href='/logout'>Logout</a>
 
 <% @contacts.each do |contact| %>
   <h2> <a href= '/contacts/<%= contact.id %>'> <%= contact.full_name %></a></h2>
