enabled flash messages and make a model for images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,6 +64,11 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+  <div class='container'>
+      <% flash.each do |name, message| %>
+        <p> <%= message %> </p>
+      <% end %>
+    </div>
     <%= yield %>
   </body>
 </html>
